Cambios de Textos

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -22,9 +22,10 @@
             <div class="row">
                 <div class="intro-box">
                     <div class="intro">
-                        <h1>We are vira agency</h1>
+                        <h1>We are ______ agency</h1>
                         <p>CAD instant!</p>
-                        <a class="btn vira-btn" href="#contact">contact us</a>
+                        <a class="btn vira-btn" href="#workstation-slider">
+request a quote</a>
                     </div>
                 </div>
             </div>
@@ -34,19 +35,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <h2 class="title">About agency</h2>
+                    <h2 class="title">About store</h2>
                     <p>
-                        Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zich meebrengt. Onze enige missie is dat jij de best geklede man van de omgeving bent. Laat gratis een op eden box samenstellen door je personal shopper en betaal.
+                        
+We strive to provide fast and easy computer assisted design projects for all our users. You will not have to move from your house, through this portal you can make your requests and our response will be immediate.
                     </p>
-                    <img src="assets/images/signature.png">
-                    <span>Vira Studio-ceo</span>
+                    <span>The team of __</span>
                 </div>
             </div>
         </div>
     </section>
     <section class="purpose section">
         <div class="container">
-            <h2 class="title">What we do</h2>
+            <h2 class="title">How to quote</h2>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="vira-card">
@@ -56,9 +57,10 @@
                             </div>
                         </div>
                         <div class="vira-card-content">
-                            <h3>Digital Design</h3>
+                            <h3>
+complete the form</h3>
                             <p>
-                                Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
+                             Follow the steps in the services section
                             </p>
                         </div>
                     </div>
@@ -71,9 +73,10 @@
                             </div>
                         </div>
                         <div class="vira-card-content">
-                            <h3>Web Development</h3>
+                            <h3>
+doing magic</h3>
                             <p>
-                                Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
+                               wait while our machinery makes magic with the specifications you gave us
                             </p>
                         </div>
                     </div>
@@ -86,9 +89,11 @@
                             </div>
                         </div>
                         <div class="vira-card-content">
-                            <h3>Digital Marketing</h3>
+                            <h3>
+Check your quote</h3>
                             <p>
-                                Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
+                                
+Go to your email and verify the quote we sent you, just as you asked!
                             </p>
                         </div>
                     </div>
@@ -126,15 +131,17 @@
                 <div class="col-sm-12">
                     <img class="quote" src="assets/images/quote.png">
                    <p>
-                       A user interface is like a joke. If you have to explain it, it’s not that good.
+                       
+you do not know which ideas will have the greatest potential until you put them into practice
                    </p>
-                   <p class="author">Martin leBlance, Iconfinder</p>
+                   <p class="author">MITT ROMMEY, 
+EX GOVERNOR OF MASSACHUSETTS</p>
                    <img src="assets/images/mouse.png">
                 </div>
             </div>
         </div>
     </section>
-    <section id="workstation" class="work section">
+    <section id="Services" class="work section">
         <div class="container">
             <h2 class="title">Services</h2>
             <div id="workstation-slider" class="owl-carousel">
@@ -334,7 +341,7 @@
                         <div class="vira-card-content">
                             <h3>Phone</h3>
                             <p>
-                                +555 211 3747
+                                +123 456 7891
                             </p>
                         </div>
                     </div>
@@ -347,7 +354,7 @@
                         <div class="vira-card-content">
                             <h3>Email</h3>
                             <p>
-                                hey@themewagon.com
+                                Contacto@CG.com
                             </p>
                         </div>
                     </div>
