personalizacion imagenes iframes y texto aun faltan

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -53,7 +53,7 @@ We strive to provide fast and easy computer assisted design projects for all our
                     <div class="vira-card">
                         <div class="vira-card-header">
                             <div class="card-icon">
-                                <span class="fa fa-diamond" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" ></span>
                             </div>
                         </div>
                         <div class="vira-card-content">
@@ -69,7 +69,7 @@ complete the form</h3>
                     <div class="vira-card">
                         <div class="vira-card-header">
                             <div class="card-icon">
-                                <span class="fa fa-cogs" aria-hidden="true"></span>
+                                <span class="	glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </div>
                         </div>
                         <div class="vira-card-content">
@@ -85,7 +85,7 @@ doing magic</h3>
                     <div class="vira-card">
                         <div class="vira-card-header">
                             <div class="card-icon">
-                                <span class="fa fa-bicycle" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-inbox" aria-hidden="true"></span>
                             </div>
                         </div>
                         <div class="vira-card-content">
@@ -108,7 +108,8 @@ Go to your email and verify the quote we sent you, just as you asked!
                     <div></div>
                 </div>
                 <div class="col-sm-5 section">
-                    <h2 class="title">Responsive design expert</h2>
+                    <h2 class="title">
+better platforms, better results</h2>
                     <div id="expert-slider" class="owl-carousel">
                         <div class="item">
                             <p>
@@ -136,7 +137,7 @@ you do not know which ideas will have the greatest potential until you put them 
                    </p>
                    <p class="author">MITT ROMMEY, 
 EX GOVERNOR OF MASSACHUSETTS</p>
-                   <img src="assets/images/mouse.png">
+                   <img src="assets/images/compas.png">
                 </div>
             </div>
         </div>
@@ -148,7 +149,7 @@ EX GOVERNOR OF MASSACHUSETTS</p>
                 <div class="item">
                     <div class="vira-card">
                         <div class="vira-card-header">
-                            <img class="img-responsive" src="assets/images/4.jpg">
+                            <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=b7dd4df85e4359c3c50a037462bade42&width=370&height=230" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="370" height="230" allowfullscreen></iframe>
                         </div>
                         <div class="vira-card-content">
                             <h3>Lego Parts</h3>
@@ -161,7 +162,8 @@ EX GOVERNOR OF MASSACHUSETTS</p>
                 <div class="item">
                     <div class="vira-card">
                         <div class="vira-card-header">
-                            <img class="img-responsive" src="assets/images/5.jpg">
+                           <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=2b2bb7c9d8b0010ec0b17565bbd38c91&width=370&height=230" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="370" height="230" allowfullscreen></iframe>
+                            <!--<img class="img-responsive" src="assets/images/5.png">-->
                         </div>
                         <div class="vira-card-content">
                             <h3>Automatic doors</h3>
@@ -174,7 +176,7 @@ EX GOVERNOR OF MASSACHUSETTS</p>
                 <div class="item">
                     <div class="vira-card">
                         <div class="vira-card-header">
-                            <img class="img-responsive" src="assets/images/6.jpg">
+                            <iframe src="https://3dwarehouse.sketchup.com/embed.html?mid=65c3e9d3f71c0dfe68efea80c8e93b4b&width=370&height=230" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="370" height="230" allowfullscreen></iframe>
                         </div>
                         <div class="vira-card-content">
                             <h3>Big Machine</h3>
@@ -190,7 +192,16 @@ EX GOVERNOR OF MASSACHUSETTS</p>
                             <img class="img-responsive" src="assets/images/4.jpg">
                         </div>
                         <div class="vira-card-content">
-                            <h3>Creative geeks</h3>
+                            <h3>Seleccion de articulo</h3>
+                            <div class="row">
+                               <div class="col-2">
+                                   <input class="form-control" type="text" placeholder="pieza..." #buscarInput/>
+                               </div>
+                               <div class="col-2">
+                                   <a href="#" class="btn btn-primary" role="button" (click)=(buscarPiezas(buscarInput.value))>BuscarPiezas</a>
+                               </div>
+                                
+                            </div>
                             <p>
                                 Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
                             </p>
@@ -200,7 +211,7 @@ EX GOVERNOR OF MASSACHUSETTS</p>
                 <div class="item">
                     <div class="vira-card">
                         <div class="vira-card-header">
-                            <img class="img-responsive" src="assets/images/5.jpg">
+                            <img class="img-responsive" src="assets/images/5.png">
                         </div>
                         <div class="vira-card-content">
                             <h3>Creative freaks</h3>
