feat(auth): working in auth module

--- a/src/app/errors/not-found/not-found.component.html
+++ b/src/app/errors/not-found/not-found.component.html
@@ -1,3 +1,21 @@
-<p>
-  not-found works!
-</p>
+<div id="content">
+  <div class="container">
+    <div class="col-sm-6 col-sm-offset-3" id="error-page">
+      <div class="box">
+        <p class="text-center">
+          <a href="javascript: void(0);" routerLink="/">
+            <img src="assets/img/logo.png" alt="Obaju template">
+          </a>
+        </p>
+
+        <h3>Lo sentimos, esta página no esta disponible.</h3>
+        <h4 class="text-muted">Error 404 - Página no encontrada</h4>
+
+        <p class="buttons"><a href="javascript: void(0);" routerLink="/" class="btn btn-template-main"><i class="fa fa-home"></i> Ir al Inicio</a>
+        </p>
+      </div>
+    </div>
+    <!-- /.col-sm-6 -->
+  </div>
+  <!-- /.container -->
+</div>
