--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -1,141 +1,44 @@
 <footer id="footer">
-    <div class="container">
-        <div class="col-md-3 col-sm-6">
-            <h4>About us</h4>
+  <div class="container">
+    <div class="col-sm-6 col-md-4">
+      <h4>Acerca de Nosotros</h4>
+      <p>
+        Somos un Startup nacido de la materia Computación Gráfica en la Universidad Nacional de Colombia. Brindamos soluciones tecnológicas al alcance de las personas y las empresas.
+      </p>
+      <hr>
+      <h4>Suscribase a nuestro boletín mensual</h4>
 
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-
-            <hr>
-
-            <h4>Join our monthly newsletter</h4>
-
-            <form>
-                <div class="input-group">
-
-                    <input type="text" class="form-control">
-
-                    <span class="input-group-btn">
-
-                <button class="btn btn-default" type="button"><i class="fa fa-send"></i></button>
-
-            </span>
-
-                </div>
-                <!-- /input-group -->
-            </form>
-
-            <hr class="hidden-md hidden-lg hidden-sm">
-
+      <form>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Ingrese su e-mail">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button"><i class="fa fa-send"></i></button>
+          </span>
         </div>
-        <!-- /.col-md-3 -->
-
-        <div class="col-md-3 col-sm-6">
-
-            <h4>Blog</h4>
-
-            <div class="blog-entries">
-                <div class="item same-height-row clearfix">
-                    <div class="image same-height-always">
-                        <a href="#">
-                            <img class="img-responsive" src="img/detailsquare.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="name same-height-always">
-                        <h5><a href="#">Blog post name</a></h5>
-                    </div>
-                </div>
-
-                <div class="item same-height-row clearfix">
-                    <div class="image same-height-always">
-                        <a href="#">
-                            <img class="img-responsive" src="img/detailsquare.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="name same-height-always">
-                        <h5><a href="#">Blog post name</a></h5>
-                    </div>
-                </div>
-
-                <div class="item same-height-row clearfix">
-                    <div class="image same-height-always">
-                        <a href="#">
-                            <img class="img-responsive" src="img/detailsquare.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="name same-height-always">
-                        <h5><a href="#">Very very long blog post name</a></h5>
-                    </div>
-                </div>
-            </div>
-
-            <hr class="hidden-md hidden-lg">
-
-        </div>
-        <!-- /.col-md-3 -->
-
-        <div class="col-md-3 col-sm-6">
-
-            <h4>Contact</h4>
-
-            <p><strong>Universal Ltd.</strong>
-                <br>13/25 New Avenue
-                <br>Newtown upon River
-                <br>45Y 73J
-                <br>England
-                <br>
-                <strong>Great Britain</strong>
-            </p>
-
-            <a href="contact.html" class="btn btn-small btn-template-main">Go to contact page</a>
-
-            <hr class="hidden-md hidden-lg hidden-sm">
-
-        </div>
-        <!-- /.col-md-3 -->
-
-
-
-        <div class="col-md-3 col-sm-6">
-
-            <h4>Photostream</h4>
-
-            <div class="photostream">
-                <div>
-                    <a href="#">
-                        <img src="img/detailsquare.jpg" class="img-responsive" alt="#">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="img/detailsquare2.jpg" class="img-responsive" alt="#">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="img/detailsquare3.jpg" class="img-responsive" alt="#">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="img/detailsquare3.jpg" class="img-responsive" alt="#">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="img/detailsquare2.jpg" class="img-responsive" alt="#">
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="img/detailsquare.jpg" class="img-responsive" alt="#">
-                    </a>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.col-md-3 -->
+        <!-- /input-group -->
+      </form>
+      <hr class="hidden-md hidden-lg hidden-sm">
     </div>
-    <!-- /.container -->
+    <!-- /.col-md-3 -->
+
+    <div class="col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-4">
+      <h4>Contacto</h4>
+      <p>
+        <strong>Computación Gráfica Ltd.</strong>
+        <br>Universidad Nacional de Colombia
+        <br>Sede Bogotá
+        <br>Carrera 45 # 26-85
+        <br>Bogotá D.C.
+        <br>
+        <strong>Colombia</strong>
+      </p>
+
+      <a href="javascript: void(0);" routerLink="contact/" class="btn btn-small btn-template-main">Contáctese con Nosotros</a>
+      <hr class="hidden-md hidden-lg hidden-sm">
+    </div>
+    <!-- /.col-md-3 -->
+  </div>
+  <!-- /.container -->
 </footer>
 <!-- /#footer -->
 
@@ -145,13 +48,11 @@
 _________________________________________________________ -->
 
 <div id="copyright">
-    <div class="container">
-        <div class="col-md-12">
-            <p class="pull-left">&copy; 2015. Your company / name goes here</p>
-            <p class="pull-right">Template by <a href="https://bootstrapious.com">Bootstrapious</a> & <a href="https://fity.cz">Fity.cz</a>
-                 <!-- Not removing these links is part of the license conditions of the template. Thanks for understanding :) If you want to use the template without the attribution links, you can do so after supporting further themes development at https://bootstrapious.com/donate  -->
-            </p>
-
-        </div>
+  <div class="container">
+    <div class="col-md-12">
+      <p class="pull-left">&copy; 2017. Computación Gráfica</p>
+      <p class="pull-right">Diseñado por <a href="http://eccarrilloe.github.io" target="_blank">Web Team</a>
+      </p>
     </div>
+  </div>
 </div>
