--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,56 @@
-<p>
-  login works!
-</p>
+<div id="heading-breadcrumbs">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Iniciar Sesión</h1>
+      </div>
+      <div class="col-md-5">
+        <ul class="breadcrumb">
+          <li><a href="index.html">Inicio</a>
+          </li>
+          <li>Iniciar Sesión</li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3">
+        <div class="box">
+          <h2 class="text-uppercase">Iniciar sesión</h2>
+
+          <p class="lead">Ya eres nuestro cliente?</p>
+          <p class="text-muted">
+            Inicia sesión con tu cuenta para realizar nuevas cotizaciones, acceder a tu historial de cotizaciones o modificar tus datos personales.
+          </p>
+          <hr>
+
+          <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
+            <form action="customer-orders.html" method="post">
+              <div class="form-group">
+                <label for="email">Correo electrónico</label>
+                <input type="text" class="form-control" id="email">
+              </div>
+              <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input type="password" class="form-control" id="password">
+              </div>
+              <button type="submit" class="btn btn-template-main pull-right"><i class="fa fa-sign-in"></i> Acceder</button>
+              <span>No tienes una cuenta? <a href="javascript: void(0);" (click)="goToRegister()">Registrate aquí!</a></span>
+            </form>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /#content -->
