--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,3 +1,92 @@
-<p>
-  register works!
-</p>
+<div id="heading-breadcrumbs">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Nueva Cuenta</h1>
+      </div>
+      <div class="col-md-5">
+        <ul class="breadcrumb">
+          <li><a href="index.html">Inicio</a>
+          </li>
+          <li>Registro</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-8 col-sm-offset-2">
+        <div class="box">
+          <h2 class="text-uppercase">Registrarse</h2>
+
+          <p class="lead">Aún no te has registrado?</p>
+          <p>Al registrarse, podrá acceder a nuevos beneficios, descuentos y podrá llevar registro de las cotizaciones que realice en nuestra plataforma. El proceso de registro solo le llevará 1 minuto.</p>
+          <p class="text-muted">
+            Si tiene alguna pregunta, por favor <a href="javascript: void(0);" (click)="goToContact()">contáctenos</a>, nuestro centro de servicio al cliente esta trabajando para usted 24/7.
+          </p>
+          <hr>
+
+          <div class="row">
+            <form action="customer-orders.html" method="post">
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label for="firstname">Nombres</label>
+                  <input type="text" class="form-control" id="firstname">
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label for="lastname">Apellidos</label>
+                  <input type="text" class="form-control" id="lastname">
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label for="address">Dirección</label>
+                  <input type="text" class="form-control" id="address">
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label for="phone">Teléfono</label>
+                  <input type="text" class="form-control" id="phone">
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <div class="form-group">
+                  <label for="email">Correo electrónico</label>
+                  <input type="text" class="form-control" id="email">
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label for="password">Contraseña</label>
+                  <input type="password" class="form-control" id="password">
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <div class="form-group">
+                  <label for="confirmpassword">Confirmar contraseña</label>
+                  <input type="password" class="form-control" id="confirmpassword">
+                </div>
+              </div>
+              <div class="col-xs-12">
+                <button type="submit" class="btn btn-template-main pull-right"><i class="fa fa-user-md"></i> Registrarme</button>
+                <span>Ya tienes una cuenta? <a href="javascript: void(0);" (click)="goToLogin()">Inicia sesión</a></span>
+              </div>
+            </form>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /#content -->
