--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.navbar ul.nav>li>a {
+  text-decoration: none;
+}
+
+.vertical-textarea {
+  resize: vertical;
+}
