--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-5">
         <ul class="breadcrumb">
-          <li><a href="index.html">Inicio</a>
+          <li><a href="#">Inicio</a>
           </li>
           <li>Contacto</li>
         </ul>
@@ -30,7 +30,6 @@
           <div class="heading">
             <h3>Formulario de contacto</h3>
           </div>
-
           <form>
             <div class="row">
               <div class="col-sm-6">
