Angular material implemented with http get request

--- a/src/app/pages/products/legos/legos.component.html
+++ b/src/app/pages/products/legos/legos.component.html
@@ -1,3 +1,32 @@
 <p>
   legos works!
 </p>
+
+<mat-slider></mat-slider>
+
+<mat-slider vertical thumbLabel tickInterval="1"></mat-slider>
+
+<button (click)="test()">sdf</button>
+
+
+
+
+
+<figure>
+
+</figure>
+
+
+<svg _ngcontent-cxo-7="" viewBox="0 0 250 250">
+  <defs _ngcontent-cxo-7="">
+    <clipPath _ngcontent-cxo-7="" id="clip">
+      <circle _ngcontent-cxo-7="" r="100" cx="97" cy="110"></circle>
+    </clipPath>
+  </defs>
+  <g _ngcontent-cxo-7="" clip-path="url(#clip)">
+    <polygon _ngcontent-cxo-7="" class="left" points="125,30 125,30 125,30 31.9,63.2 46.1,186.3 125,230 125,230 125,230 203.9,186.3 218.1,63.2"></polygon>
+    <polygon _ngcontent-cxo-7="" class="right" points="125,30 125,52.2 125,52.1 125,153.4 125,153.4 125,230 125,230 203.9,186.3 218.1,63.2 125,30"></polygon>
+    <path _ngcontent-cxo-7="" class="a" d="M125,52.1L66.8,182.6h0h21.7h0l11.7-29.2h49.4l11.7,29.2h0h21.7h0L125,52.1L125,52.1L125,52.1L125,52.1
+      L125,52.1z M142,135.4H108l17-40.9L142,135.4z"></path>
+  </g>
+</svg>
