Imagenes y logo new

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,14 +9,14 @@ _________________________________________________________ -->
     <div class="container">
       <div class="row mb-small">
         <div class="col-sm-12 text-center">
-          <h1>Universal is great</h1>
-          <h2>Last week more than 100 companies signed up to help them in their projects.</h2>
+          <h1>SOMOS CGSTORE</h1>
+          <h2>CAD INSTANTANEO!</h2>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-6 mb-small">
-          <img class="img-responsive" src="assets/img/template-mac.png" alt="">
+          <img class="img-responsive" src="../../../assets/img/Hello.png" alt="">
         </div>
 
         <div class="col-sm-6 text-center-xs">
@@ -40,7 +40,7 @@ _________________________________________________________ -->
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="text-uppercase">Everything you need</h2>
+        <h2 class="text-uppercase">RELLENA EL FORMULARIO</h2>
         <p class="lead mb-small">40+ prepared HTML templates</p>
         <p class="mb-small">We have prepared literally <strong>everything you would possibly need building corporate, e-commerce or portfolio website</strong>. If you still miss something, let us know and we will try to include it in theme's future updates.</p>
 
@@ -61,8 +61,8 @@ _________________________________________________________ -->
         <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
       </div>
       <div class="col-md-6">
-        <h2 class="text-uppercase">Clean, valid and documented code &amp; support</h2>
-        <p class="lead mb-small">We made our best to help you</p>
+        <h2 class="text-uppercase">Espera unos segundos </h2>
+        <p class="lead mb-small">Nuestro sistema automatizado iniciara tan pronto pueda a resolver tu solicitud</p>
         <p class="mb-small">Everything in this template is properly named and categorized. In case you don't find in the documentation answer to your question, our support is here to help!</p>
 
         <p><a href="#" class="btn btn-template-transparent-primary">Read more</a>
@@ -76,7 +76,7 @@ _________________________________________________________ -->
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="text-uppercase">Easy to customize</h2>
+        <h2 class="text-uppercase">Revisa tu bandeja de entrada</h2>
         <p class="mb-small">We have made this template with focus on future client customization. You get <strong>40+ prepared HTML templates</strong>, many <strong>reusable components</strong> and <strong>LESS files</strong> for even easier template customization.</p>
 
         <p><a href="#" class="btn btn-template-main">Read more</a>
@@ -209,28 +209,31 @@ Sign Up </a>
   </div>
 </section>
 
+    
+
+
 <section class="bar background-gray no-mb">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <ul class="owl-carousel customers">
           <li class="item">
-            <img src="assets/img/customer-1.png" alt="" class="img-responsive">
+            <img src="../../../assets/img/customer-1.png" alt="asdasd" class="img-responsive">
           </li>
           <li class="item">
-            <img src="assets/img/customer-2.png" alt="" class="img-responsive">
+            <img src="../../../assets/img/customer-1.png" alt="asdasd" class="img-responsive">
           </li>
           <li class="item">
-            <img src="assets/img/customer-3.png" alt="" class="img-responsive">
+            <img src="../../../assets/img/customer-1.png" alt="adasd" class="img-responsive">
           </li>
           <li class="item">
-            <img src="assets/img/customer-4.png" alt="" class="img-responsive">
+            <img src="../../../assets/img/customer-1.png" alt="dasdasd" class="img-responsive">
           </li>
           <li class="item">
-            <img src="assets/img/customer-5.png" alt="" class="img-responsive">
+            <img src="../../../assets/img/customer-1.png" alt="adas" class="img-responsive">
           </li>
           <li class="item">
-            <img src="assets/img/customer-6.png" alt="" class="img-responsive">
+            <img src="../../../assets/img/customer-1.png" alt="dada" class="img-responsive">
           </li>
         </ul>
         <!-- /.owl-carousel -->
@@ -239,6 +242,9 @@ Sign Up </a>
     </div>
   </div>
 </section>
+
+
+
 
 <section class="bar background-image-fixed-2 no-mb color-white text-center">
   <div class="dark-mask"></div>
