--- a/src/app/pages/products/legos/legos.component.css
+++ b/src/app/pages/products/legos/legos.component.css
@@ -1,3 +1,33 @@
 mat-slider {
   width: 200px;
 }
+
+.puerta{
+ stroke: #000000;
+    fill:red; 
+    /**/
+}
+
+
+.example-h2 {
+  margin: 10px;
+}
+
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.example-margin {
+  margin: 10px;
+}
+
+.mat-slider-horizontal {
+  width: 300px;
+}
+
+.mat-slider-vertical {
+  height: 300px;
+}
